--- a/views/specialist/add.ejs
+++ b/views/specialist/add.ejs
@@ -19,6 +19,13 @@
 <% } %> 
 
   <div class="container">
+
+    <div class="row" style="margin-top: 40px;">
+      <div class="col-md-12">
+        <a href="../specialist/list" class="btn btn-primary"> Specialist List </a>
+      </div>
+    </div>
+    
     <div class="row">
      <h3>Add Specialist</h3>
      <form action="/specialist/add" method="post" name="form" enctype="multipart/form-data">
