--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,34 +12,13 @@
   
 <div class="container">
   <div class="row">
-  	<h2>Basic Table</h2>
-  <p>The .table class adds basic styling (light padding and only horizontal dividers) to a table:</p>            
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Email</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
-      </tr>
-      <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
-      </tr>
-      <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
-      </tr>
-    </tbody>
-  </table>
+    <h3 style="margin-bottom: 40px;" class="text-center">Doctor and Specialist CRUD</h3>
+    <div class="col-md-6 text-center">
+      <a href="../doctor/list" class="btn btn-primary"> Doctors </a>
+    </div>
+    <div class="col-md-6 text-center">
+      <a href="../specialist/list" class="btn btn-primary"> Specialists </a>
+    </div>
   </div>
 </div>
 
