--- a/views/doctor/add.ejs
+++ b/views/doctor/add.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </head>
 <body>
 
@@ -28,14 +29,14 @@
 
     <div class="row">
      <h3>Add Doctor Profile</h3>
-     <form action="/doctor/add" method="post" name="form" enctype="multipart/form-data">
+     <form action="/doctor/add" method="post" name="form" enctype="multipart/form-data" id="add_doctor">
       <div class="form-group">
         <label>Doctor Name</label>
-        <input type="text" class="form-control" name="name" placeholder="Doctor Name">
+        <input type="text" class="form-control" required name="name" placeholder="Doctor Name">
       </div>
       <div class="form-group">
         <label>Doctor Qualification</label>
-        <input type="text" class="form-control" name="course" placeholder="Doctor Qualification">
+        <input type="text" class="form-control" name="course" placeholder="Doctor Qualification" required>
       </div>
 
       <div class="form-group">
@@ -50,7 +51,7 @@
 
         <div class="form-group">
           <label>Doctor Photo</label>
-          <input type="file" name="file" class="form-control" id="file">
+          <input type="file" name="file" class="form-control" id="file" required accept="image/x-png,image/jpg,image/jpeg">
         </div>
         <input type="submit" class="btn btn-primary" value="Add Doctor">
       </form>
@@ -58,4 +59,6 @@
   </div>
 
 </body>
+
 </html>
+
