--- a/views/specialist/add.ejs
+++ b/views/specialist/add.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </head>
 <body>
 
@@ -31,11 +32,11 @@
      <form action="/specialist/add" method="post" name="form" enctype="multipart/form-data">
       <div class="form-group">
         <label>Subject</label>
-        <input type="text" class="form-control" name="subject" id="subject" placeholder="Name">
+        <input type="text" class="form-control" name="subject" id="subject" placeholder="Name" required>
       </div>
       <div class="form-group">
         <label>Specialist Photo</label>
-        <input type="file" name="file" class="form-control" id="file">
+        <input type="file" name="file" class="form-control" id="file" required accept="image/x-png,image/jpg,image/jpeg">
       </div>
       <input type="submit" class="btn btn-primary" value="Add">
     </form>
